lx/test/fixtures/resolve/invalid/assignment-to-literal.lx
// Test case: Assignment to literal
// This should be rejected by the parser (not a valid lvalue)

42 = 1
